--- a/opencl/clinterval_callbacks.cpp.erb
+++ b/opencl/clinterval_callbacks.cpp.erb
@@ -41,7 +41,7 @@ static void create_and_enqueue_device_message(const char* hostname, const proces
                                               const char* name, const uint64_t ts, const uint64_t duration, const bool err) {
 
      /* Message creation */
-     bt_message *message = create_device_message(hostname, process_id, thread_id, device_id, subdevice_id, name, ts, duration, err,
+     bt_message *message = create_device_message(hostname, process_id, thread_id, device_id, subdevice_id, name, ts, duration, err, "",
                                                  clinterval_iter_g->dispatch->device_event_class,
                                                  clinterval_self_message_iterator_g,
                                                  clinterval_iter_g->dispatch->stream);
